style: auto-fix Java formatting issues
- Applied Google Java Format via Spotless
- Removed unused imports
- Fixed code style violations

🤖 Automated fixes by GitHub Actions