@@ -23,9 +23,7 @@ public class InvestigationService {
   private final ConversationRepository conversationRepository;
 
   public List<InvestigationStep> executeQueries(
-      UUID fileId,
-      List<InvestigationQuery> queries,
-      List<Hypothesis> hypotheses) {
+      UUID fileId, List<InvestigationQuery> queries, List<Hypothesis> hypotheses) {
 
     List<InvestigationStep> steps = new ArrayList<>();
     List<InvestigationQuery> capped = queries.stream().limit(5).collect(Collectors.toList());
@@ -37,27 +35,34 @@ public class InvestigationService {
       }
 
       try {
-        Hypothesis linked = hypotheses.stream()
-            .filter(h -> query.getId().equals(h.getQueryRef()))
-            .findFirst().orElse(null);
+        Hypothesis linked =
+            hypotheses.stream()
+                .filter(h -> query.getId().equals(h.getQueryRef()))
+                .findFirst()
+                .orElse(null);
 
         Specification<ConversationEntity> spec = buildSpec(fileId, query);
-        var page = conversationRepository.findAll(spec,
-            PageRequest.of(0, 10, Sort.by("totalBytes").descending()));
+        var page =
+            conversationRepository.findAll(
+                spec, PageRequest.of(0, 10, Sort.by("totalBytes").descending()));
 
-        List<ConversationEvidence> evidence = page.getContent().stream()
-            .map(this::toEvidence)
-            .collect(Collectors.toList());
+        List<ConversationEvidence> evidence =
+            page.getContent().stream().map(this::toEvidence).collect(Collectors.toList());
 
-        steps.add(InvestigationStep.builder()
-            .query(query)
-            .hypothesis(linked)
-            .conversations(evidence)
-            .conversationCount(page.getTotalElements())
-            .build());
+        steps.add(
+            InvestigationStep.builder()
+                .query(query)
+                .hypothesis(linked)
+                .conversations(evidence)
+                .conversationCount(page.getTotalElements())
+                .build());
 
-        log.info("Query '{}' ({}): {} total matches, returning {}",
-            query.getId(), query.getLabel(), page.getTotalElements(), evidence.size());
+        log.info(
+            "Query '{}' ({}): {} total matches, returning {}",
+            query.getId(),
+            query.getLabel(),
+            page.getTotalElements(),
+            evidence.size());
       } catch (Exception e) {
         log.error("Failed to execute investigation query '{}': {}", query.getId(), e.getMessage());
       }
@@ -67,10 +72,18 @@ public class InvestigationService {
   }
 
   private boolean isCatchAll(InvestigationQuery q) {
-    return q.getSrcIp() == null && q.getDstIp() == null && q.getDstPort() == null
-        && q.getProtocol() == null && q.getAppName() == null && q.getCategory() == null
-        && q.getHasRisks() == null && q.getHasTlsAnomaly() == null && q.getRiskType() == null
-        && q.getMinBytes() == null && q.getMaxBytes() == null && q.getMinFlows() == null;
+    return q.getSrcIp() == null
+        && q.getDstIp() == null
+        && q.getDstPort() == null
+        && q.getProtocol() == null
+        && q.getAppName() == null
+        && q.getCategory() == null
+        && q.getHasRisks() == null
+        && q.getHasTlsAnomaly() == null
+        && q.getRiskType() == null
+        && q.getMinBytes() == null
+        && q.getMaxBytes() == null
+        && q.getMinFlows() == null;
   }
 
   private Specification<ConversationEntity> buildSpec(UUID fileId, InvestigationQuery q) {
@@ -82,7 +95,8 @@ public class InvestigationService {
       if (q.getSrcIp() != null) predicates.add(cb.equal(root.get("srcIp"), q.getSrcIp()));
       if (q.getDstIp() != null) predicates.add(cb.equal(root.get("dstIp"), q.getDstIp()));
       if (q.getDstPort() != null) predicates.add(cb.equal(root.get("dstPort"), q.getDstPort()));
-      if (q.getProtocol() != null) predicates.add(cb.equal(cb.upper(root.get("protocol")), q.getProtocol().toUpperCase()));
+      if (q.getProtocol() != null)
+        predicates.add(cb.equal(cb.upper(root.get("protocol")), q.getProtocol().toUpperCase()));
       if (q.getAppName() != null) {
         // Sentinel values the LLM uses to mean "unknown/null app" — map to IS NULL
         if (q.getAppName().equalsIgnoreCase("UNKNOWN_APP")
@@ -98,12 +112,14 @@ public class InvestigationService {
       // minBytes/maxBytes are per-conversation filters. Drop them when srcIp or riskType is also
       // set — in those cases the LLM tends to pass the aggregate total which would match nothing.
       boolean byteFilterSafe = q.getSrcIp() == null && q.getRiskType() == null;
-      if (q.getMinBytes() != null && byteFilterSafe) predicates.add(cb.greaterThanOrEqualTo(root.get("totalBytes"), q.getMinBytes()));
-      if (q.getMaxBytes() != null && byteFilterSafe) predicates.add(cb.lessThanOrEqualTo(root.get("totalBytes"), q.getMaxBytes()));
+      if (q.getMinBytes() != null && byteFilterSafe)
+        predicates.add(cb.greaterThanOrEqualTo(root.get("totalBytes"), q.getMinBytes()));
+      if (q.getMaxBytes() != null && byteFilterSafe)
+        predicates.add(cb.lessThanOrEqualTo(root.get("totalBytes"), q.getMaxBytes()));
 
       if (Boolean.TRUE.equals(q.getHasRisks())) {
-        predicates.add(cb.greaterThan(
-            cb.function("cardinality", Integer.class, root.get("flowRisks")), 0));
+        predicates.add(
+            cb.greaterThan(cb.function("cardinality", Integer.class, root.get("flowRisks")), 0));
       }
 
       if (Boolean.TRUE.equals(q.getHasTlsAnomaly())) {
@@ -114,19 +130,20 @@ public class InvestigationService {
         // Match exact element in the PostgreSQL array text representation: {a,b,c}
         // An element can appear as: {riskType,  {riskType}  ,riskType,  ,riskType}
         String rt = q.getRiskType();
-        predicates.add(cb.or(
-            cb.like(root.get("flowRisks").as(String.class), "{" + rt + ",%"),
-            cb.like(root.get("flowRisks").as(String.class), "%," + rt + ",%"),
-            cb.like(root.get("flowRisks").as(String.class), "%," + rt + "}"),
-            cb.equal(root.get("flowRisks").as(String.class), "{" + rt + "}")
-        ));
+        predicates.add(
+            cb.or(
+                cb.like(root.get("flowRisks").as(String.class), "{" + rt + ",%"),
+                cb.like(root.get("flowRisks").as(String.class), "%," + rt + ",%"),
+                cb.like(root.get("flowRisks").as(String.class), "%," + rt + "}"),
+                cb.equal(root.get("flowRisks").as(String.class), "{" + rt + "}")));
       }
 
       if (q.getMinFlows() != null) {
         // Subquery: src IPs with at least minFlows conversations in this file
         var subquery = query.subquery(String.class);
         var subRoot = subquery.from(ConversationEntity.class);
-        subquery.select(subRoot.get("srcIp"))
+        subquery
+            .select(subRoot.get("srcIp"))
             .where(cb.equal(subRoot.get("file").get("id"), fileId))
             .groupBy(subRoot.get("srcIp"))
             .having(cb.greaterThanOrEqualTo(cb.count(subRoot), (long) q.getMinFlows()));
@@ -138,9 +155,7 @@ public class InvestigationService {
   }
 
   private ConversationEvidence toEvidence(ConversationEntity e) {
-    List<String> risks = e.getFlowRisks() != null
-        ? Arrays.asList(e.getFlowRisks())
-        : List.of();
+    List<String> risks = e.getFlowRisks() != null ? Arrays.asList(e.getFlowRisks()) : List.of();
 
     return ConversationEvidence.builder()
         .srcIp(e.getSrcIp())
